fix: add missing link description and fix the contrast ratio in menu text to improve the accessibility

--- a/src/components/Header/NavigationList/NavigationItem/NavigationItem.module.scss
+++ b/src/components/Header/NavigationList/NavigationItem/NavigationItem.module.scss
@@ -12,13 +12,13 @@
   text-wrap: nowrap;
 
   &:hover {
-    color: var(--white);
+    color: var(--black);
     background-color: var(--accent-color-green);
   }
 }
 
 .navListItemActive {
-  color: var(--white);
+  color: var(--black);
   background-color: var(--accent-color-green);
 }
 
